# vcl_test

./: CMakeLists.txt  DgemmBlocked.cpp  DgemmBlocked1AccIJK.cpp  DgemmBlocked1AccJKI.cpp  DgemmBlocked1AccKIJ.cpp  DgemmBlocked4AccIJK.cpp  DgemmBlocked4AccJKI.cpp  DgemmBlocked4AccKIJ.cpp  DgemmNonBlocked1AccIJK.cpp  DgemmNonBlocked1AccJKI.cpp  DgemmNonBlocked1AccKIJ.cpp  DgemmNonBlocked4AccIJK.cpp  DgemmNonBlocked4AccJKI.cpp  DgemmNonBlocked4AccKIJ.cpp  DgemmReference.cpp  DgemmScalarBlocked1AccIJK.cpp  DgemmScalarBlocked1AccJKI.cpp  DgemmScalarBlocked4AccIJK.cpp  DgemmScalarBlocked4AccJKI.cpp  DgemmScalarNonBlocked1AccIJK.cpp  DgemmScalarNonBlocked1AccJKI.cpp  DgemmScalarNonBlocked4AccIJK.cpp  DgemmScalarNonBlocked4AccJKI.cpp  DgemmVector.cpp  DgemmVectorBlocked.cpp  DgemmVectorBlocked1AccIJK.cpp  DgemmVectorBlocked1AccJKI.cpp  DgemmVectorBlocked2AccIJK.cpp  DgemmVectorBlocked2AccJKI.cpp  DgemmVectorBlockedIJK.cpp  DgemmVectorBlockedJKI.cpp  DgemmVectorBlockedKIJ.cpp  DgemmVectorNonBlocked.cpp  DgemmVectorNonBlocked1AccIJK.cpp  DgemmVectorNonBlocked1AccJKI.cpp  DgemmVectorNonBlocked2AccIJK.cpp  DgemmVectorNonBlocked2AccJKI.cpp  DgemmVectorNonBlockedIJK.cpp  DgemmVectorNonBlockedJKI.cpp  DgemmVectorNonBlockedKIJ.cpp  (+8 more)
includes/dgemm/: Dgemm.h  DgemmBlocked.h  DgemmBlocked1AccIJK.h  DgemmBlocked1AccJKI.h  DgemmBlocked1AccKIJ.h  DgemmBlocked4AccIJK.h  DgemmBlocked4AccJKI.h  DgemmBlocked4AccKIJ.h  DgemmNonBlocked.h  DgemmNonBlocked1AccIJK.h  DgemmNonBlocked1AccJKI.h  DgemmNonBlocked1AccKIJ.h  DgemmNonBlocked4AccIJK.h  DgemmNonBlocked4AccJKI.h  DgemmNonBlocked4AccKIJ.h  DgemmReference.h  DgemmScalarBlocked1AccIJK.h  DgemmScalarBlocked1AccJKI.h  DgemmScalarBlocked4AccIJK.h  DgemmScalarBlocked4AccJKI.h  DgemmScalarNonBlocked1AccIJK.h  DgemmScalarNonBlocked1AccJKI.h  DgemmScalarNonBlocked4AccIJK.h  DgemmScalarNonBlocked4AccJKI.h  DgemmVector.h  DgemmVectorBlocked.h  DgemmVectorBlocked1AccIJK.h  DgemmVectorBlocked1AccJKI.h  DgemmVectorBlocked2AccIJK.h  DgemmVectorBlocked2AccJKI.h  DgemmVectorBlockedIJK.h  DgemmVectorBlockedJKI.h  DgemmVectorBlockedKIJ.h  DgemmVectorNonBlocked.h  DgemmVectorNonBlocked1AccIJK.h  DgemmVectorNonBlocked1AccJKI.h  DgemmVectorNonBlocked2AccIJK.h  DgemmVectorNonBlocked2AccJKI.h  DgemmVectorNonBlockedIJK.h  DgemmVectorNonBlockedJKI.h  (+13 more)
includes/vcl/: instrset.h
